syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

import "google/protobuf/timestamp.proto";

service KeyManagerGrpcService {
    rpc cadastrarChavePix (NovaChavePixRequest) returns (NovaChavePixResponse) {}
}

service KeyManagerRemoveGrpcService {
    rpc deletarChavePix (DeletaChavePixRequest) returns (DeletaChavePixResponse) {}
}

service KeyManagerDadosGrpcService {
    rpc dadosChavePix (DadosChavePixRequest) returns (DadosChavePixResponse) {}
}

service KeyManagerListaGrpcService {
    rpc listaChavesPix (ListaChavesPixRequest) returns (ListaChavesPixResponse) {}
}

enum TipoChavePix {
    TIPO_CHAVE_DESCONHECIDO = 0;
    CELULAR = 1;
    EMAIL = 2;
    ALEATORIO = 3;
    CPF = 4;
}

enum TipoConta {
    TIPO_CONTA_DESCONHECIDO = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
}

message NovaChavePixRequest {
    string idCliente = 1;
    TipoChavePix tipoChave = 2;
    string valor = 3;
    TipoConta tipoConta = 4;
}

message NovaChavePixResponse {
    string pixId = 1;
}

message DeletaChavePixRequest {
    string pixId = 1;
    string idCliente = 2;
}

message DeletaChavePixResponse {
    string pixId = 1;
    string idCliente = 2;
}

message DadosChavePixRequest {

    message PixId {
        string pixId = 2;
        string idCliente = 3;
    }

    oneof busca {
        string chave = 1;
        PixId pixId = 2;
    }
}

message DadosChavePixResponse {

    string clienteId = 1;
    string pixId = 2;
    ChavePix chave = 3;

    message ChavePix {

        message Conta {
            TipoConta tipo = 1;
            string instituicao = 2;
            string nomeDoTitular = 3;
            string cpfDoTitular = 4;
            string agencia = 5;
            string numeroDaConta = 6;
        }

        TipoChavePix tipo = 1;
        string chave = 2;
        Conta conta = 3;
        google.protobuf.Timestamp criadaEm = 4;
    }

}

message ListaChavesPixRequest {
    string clienteId = 1;
}

message ListaChavesPixResponse {
    message ChavePixResponse {
        string pixId = 1;
        TipoChavePix tipoChave = 2;
        string valor = 3;
        TipoConta tipoConta = 4;
        google.protobuf.Timestamp  criadaEm = 5;
    }

    string clienteId = 1;
    repeated ChavePixResponse chavePix = 2;
}
